--- a/digital-scratch-map/digital.html
+++ b/digital-scratch-map/digital.html
@@ -8,7 +8,8 @@
 <link rel="icon" type="image/x-icon" href="../common/assets/emblem-colors.png">
 </head>
 <body>
-<div class="container">
+
+<div class="desktop-container">
 <!-- Menu ---------------------------------------------------------------------------------- -->
 <div class="menu-container">
 <div id="menu-box">
@@ -17,12 +18,12 @@
 <li><a id="top" href="../index.html">Between Data & Art</a></li>
 <li><a href="../beckham-freekicks/beckham.html">David Beckham Free Kicks</a></li>
 <li><a href="digital.html">Digital Scratch Map</a></li>
-<li><a href="../five-million-steps/steps.html">5 Million Step Challenge (Power Bi)</a></li>
+<li><a href="../five-million-steps/steps.html">5 Million Step Challenge <br>(Power Bi)</a></li>
 </ul>
 </div>
 <!-- Main ---------------------------------------------------------------------------------- -->
-<div class="main-container">
-<div id="page-header">
+<div class="main-container desk-c">
+<div class="page-header">
     <h1>Digital Scratch Map</h1>
     <h2>Every country visited in the world</h2>
 </div>
@@ -41,6 +42,8 @@
     <div class="container-graph">
     <svg id="map" width="960" height="600"></svg>
     </div>
+</div>
+</div>
 </div>
 <script type="module" src="./js/digital-scratch-map.js"></script>
 </body>
