--- a/five-million-steps/steps.html
+++ b/five-million-steps/steps.html
@@ -8,7 +8,7 @@
 <link rel="icon" type="image/x-icon" href="../common/assets/emblem-colors.png">
 </head>
 <body>
-<div class="container">
+<div class="desktop-container">
 <!-- Menu ---------------------------------------------------------------------------------- -->
 <div class="menu-container">
 <div id="menu-box">
@@ -17,25 +17,23 @@
 <li><a id="top" href="../index.html">Between Data & Art</a></li>
 <li><a href="../beckham-freekicks/beckham.html">David Beckham Free Kicks</a></li>
 <li><a href="../digital-scratch-map/digital.html">Digital Scratch Map</a></li>
-<li><a href="steps.html">5 Million Step Challenge (Power Bi)</a></li>
+<li><a href="steps.html">5 Million Step Challenge <br>(Power Bi)</a></li>
 </ul>
 </div>
 <!-- Main ---------------------------------------------------------------------------------- -->
-<div class="main-container">
-<div id="page-header">
+<div class="main-container desk-c">
+<div class="page-header">
     <h1>5 Million Step Challenge</h1>
     <h2>Walking 5 million steps in 2024</h2>
 </div>
 <div class="Pbi-container">
 
 
-<iframe 
-title="Steps Dark" 
-width="1300" height="800" 
-src="https://app.powerbi.com/view?r=eyJrIjoiNWM1MzQzYzctYjA5Yy00OGI1LTlmOTEtZTg2ZTI2NGExZDdiIiwidCI6ImJhYTk3Njc1LTU2YzktNDE2MC1hM2I3LTIzMDQyZGM4OTI1MSJ9" 
-frameborder="0" 
-allowFullScreen="true">
-</iframe>
+    <iframe title="Steps-bda-new-light" 
+    width="1300" height="800" 
+    src="https://app.powerbi.com/view?r=eyJrIjoiNWEyZmY4YTgtZjE2Zi00ZGQ5LWIwMTctZmNlMjhhYjlhMTY2IiwidCI6ImJhYTk3Njc1LTU2YzktNDE2MC1hM2I3LTIzMDQyZGM4OTI1MSJ9" 
+    frameborder="0" 
+    allowFullScreen="true"></iframe>
 
 </div>   
 </div>
