--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/home/css/index.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="/home/css/index.css">
 
-    <title>Between Data & Art</title>
-    <link rel="icon" type="image/x-icon" href="common/assets/emblem-colors.png">
+<title>Between Data & Art</title>
+<link rel="icon" type="image/x-icon" href="common/assets/emblem-colors.png">
 </head>
 <body>
+<!-- Mobile ------------------------------------------------------------------------------------------------------------------------ ***** -->
+<div id="mobile">
+<div id="container">
+<!-- Header --------------------------------------------------------------------------------- -->
+<div id="header-container"> 
+<img src="/common/assets/emblem-colors.png" alt="Image Description" class="menu-image"> 
+<h1>Between Data & Art</h1> 
+</div>
+<!-- Cards ---------------------------------------------------------------------------------- -->
+<div id="contents-container-mobile">
+    Welcome to Between Data & Art.
+    <br>
+Mobile and tablet are currently unavailable. For full access to the projects, please visit this site on a laptop/desktop. Thank you!
+</div>
+</div>
+</div>
+
+<!-- Desktop ------------------------------------------------------------------------------------------------------------------------ ***** -->
+<div id="desktop">
 <div id="container">
 <!-- Header --------------------------------------------------------------------------------- -->
 <div id="header-container"> 
@@ -27,5 +46,8 @@
 <a href="/five-million-steps/steps.html">5 Million Step Challenge (Power Bi)</a>
 </div>
 </div>
+</div>
+</div>
+
 </body>
 </html> 
